Squish content in guided setup wizard. Issue: #843

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -1018,7 +1018,6 @@ a.fa:hover {
     display: inline-block;
     outline: none;
     margin-right: 1em;
-    margin-bottom: 1em;
     .fa {
       margin-right: 0.5em;
     }
@@ -1055,7 +1054,7 @@ a.fa:hover {
     .icon {
       background-size: contain;
       background-repeat: no-repeat;
-      padding-top: 150px;
+      padding-top: 100px;
     }
     .contact-pregnant {
       background-image: url('../img/icon-pregnant.svg');
@@ -1081,15 +1080,15 @@ a.fa:hover {
     float: right;
   }
   .primary-contact-content .horizontal-options a {
-    width: 150px;
+    width: 100px;
     vertical-align: top;
     .circle {
-      height: 150px;
-      width: 150px;
+      height: 100px;
+      width: 100px;
     }
   }
   .language-preference-content .horizontal-options {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     a {
       width: 100px;
       .rectangle {
@@ -1125,12 +1124,12 @@ a.fa:hover {
   }
   .modem-setup-content {
     label {
-      margin-top: 1.5em;
+      margin-top: 0.5em;
       margin-bottom: 0;
       display: block;
     }
     img {
-      margin: 1em;
+      margin: 0.5em 1em;
     }
     .small-field {
       width: 3em;
