--- a/static/css/panel.less
+++ b/static/css/panel.less
@@ -21,6 +21,9 @@
   .panel-heading + .panel-collapse > .panel-body {
     border: 0;
   }
+  .panel-body {
+    padding-top: 0;
+  }
   .panel-heading {
     padding: 0;
     .panel-title a {
